# sweights

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  release.py  setup.cfg
.github/workflows/: docs.yml  release.yml
doc/: .about.rst.swp  about.rst  check_rf_conversion.ipynb  conf.py  contribute.rst  index.rst  index.rst.in  install.rst  planned_changes.md  reference.rst  release.md  requirements.py  requirements.txt  rooabspdf_conversion.ipynb  tutorial.ipynb  tutorials.rst
doc/notebooks/: experimental.ipynb  experimental_basic.ipynb  experimental_nofit.ipynb  experimental_nonfactorizing.ipynb  factorisation_test.ipynb  factorization_test.ipynb  factorization_violation.ipynb  roopdf_conversion.ipynb  tutorial.ipynb  tutorial_basic.ipynb  tutorial_experimental.ipynb  tutorial_factorization_violation.ipynb
src/sweights/: __init__.py  covariance.py  cow.py  experimental.py  independence.py  sweight.py  testing.py  toy.py  typing.py  util.py
tests/: check_roofit_conversion.py  dummy_module.py  example.py  test_cow.py  test_experimental.py  test_independence.py  test_sweight.py  test_typing.py  test_util.py
