[build-system]
requires = ["setuptools >= 60", "setuptools_scm[toml] >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sweights"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20.1", "scipy>=1.5.1", "iminuit>=2.20"]
authors = [
    { name = "Matthew Kenzie", email = "matthew.kenzie@cern.ch" },
    { name = "Hans Dembinski", email = "hans.dembinski@gmail.com" },
]
description = "Tools for producing sweights using classic methods or custom orthogonal weight functions (COWs) and for correcting covariance matrices for weighted data fits."
readme = "README.rst"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Intended Audience :: Science/Research',
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "coverage[toml]",
    "matplotlib==3.9.0", # 3.9.1 is broken on windows
]
doc = [
    "ipython",
    "nbsphinx",
    "sphinx<=8.1.3",     # temporary: 8.2.0 broke nbsphinx 0.9.6 
    "sphinx_rtd_theme",  # installs the right version of sphinx
    "boost-histogram",
    "matplotlib==3.9.0", # 3.9.1 is broken on windows
    "uproot",
    "pandas",
    "resample",
]

[project.urls]
repositoy = "https://github.com/sweights/sweights"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
extend-select = ["E", "F", "W", "D"]
ignore = [
    "D212", # multi-line-summary-first-line
]
unfixable = ["ERA"]
pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B", "D", "E731"]
"doc/**" = ["D", "E731"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
files = ["src"]
strict = true
allow_redefinition = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sweights.covariance", "sweights.sweight"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --strict-config --strict-markers -q -ra --ff"
testpaths = ["src/sweights", "tests"]
xfail_strict = true
filterwarnings = ["error::DeprecationWarning", "ignore::FutureWarning"]
