[metadata]
name = sweights
version = attr: sweights.__version__
author = Matthew Kenzie
author_email = matthew.kenzie@cern.ch
description = Tools for producing sweights using classic methods or custom orthogonal weight functions (COWs) and for corrected covariance matrices for weighted data fits.
homepage = https://github.com/matthewkenzie/sweights
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
project_urls =
    Bug Tracker = https://github.com/matthewkenzie/sweights/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy

[options.extras_require]
test =
    iminuit >= 2.0.0

[options.packages.find]
where = src
